--- a/css/lozicore.css
+++ b/css/lozicore.css
@@ -43,10 +43,10 @@ p {
     margin-left: 2%;
 }
 
-.tm-title-gray { color: var(--primary-color); font-weight: bold; }
+.tm-title-gray { color: var(--primary-color); font-weight: bold;}
 
 .tm-hr {
-    width: 240px;
+    width: 100px;
     border-top: 3px solid var(--primary-color);
     margin: 0;
 }
@@ -118,7 +118,7 @@ p {
 .tm-logo-text { font-size: 2rem; }
 #parallax-1 { min-height: 690px; }
 #parallax-2 { min-height: 590px; }
-#parallax-3 { min-height: 400px; }
+#parallax-3 { min-height: 250px; }
 
 .parallax-window {    
     background: transparent;
@@ -150,7 +150,8 @@ p {
 
 .nav-item.active .nav-link,
 .nav-item:hover .nav-link {
-    color: var(--primary-color);
+    color: white;
+    background-color: var(--primary-color);
     border-top: 8px solid var(--primary-color);
     border-bottom: 8px solid var(--primary-color);
 }
@@ -181,9 +182,11 @@ h4 { font-size: 1.5rem; }
 .tm-services-img { margin-right: 40px; max-width: 350px; }
 .tm-strategy-text { max-width: 880px; }
 .mb-6 { margin-bottom: 120px; }
+.mb-66 { margin-bottom: 120px; margin: 10px; }
 .mb-7 { margin-bottom: 140px; }
 .mb-8 { margin-bottom: 80px; }
 .mb-5 { margin-bottom: 10px; }
+.mb-55 { margin: 10px; }
 .mb-60 { margin-bottom: 60px; }
 .mb-10 { margin-bottom: 100px; }
 .mb-25 { margin-bottom: 250px; }
